; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_gtk_x11.c_gui_mch_get_screen_dimensions.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_gtk_x11.c_gui_mch_get_screen_dimensions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@p_ghr = common dso_local global i32 0, align 4
@gui = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gui_mch_get_screen_dimensions(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = call i32 (...) @gdk_screen_width()
  %6 = load i32*, i32** %3, align 8
  store i32 %5, i32* %6, align 4
  %7 = call i32 (...) @gdk_screen_height()
  %8 = load i32, i32* @p_ghr, align 4
  %9 = sub nsw i32 %7, %8
  %10 = load i32*, i32** %4, align 8
  store i32 %9, i32* %10, align 4
  %11 = call i64 (...) @get_menu_tool_width()
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* %12, align 4
  %14 = sext i32 %13 to i64
  %15 = sub nsw i64 %14, %11
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %12, align 4
  %17 = call i64 (...) @get_menu_tool_height()
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %18, align 4
  %20 = sext i32 %19 to i64
  %21 = sub nsw i64 %20, %17
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %18, align 4
  ret void
}

declare dso_local i32 @gdk_screen_width(...) #1

declare dso_local i32 @gdk_screen_height(...) #1

declare dso_local i64 @get_menu_tool_width(...) #1

declare dso_local i64 @get_menu_tool_height(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
